Fix layout overflow issue.

--- a/meteor-app/client/main.less
+++ b/meteor-app/client/main.less
@@ -63,9 +63,6 @@ a {
   }
 }
 
-
-
-
 .clearfix {
   &:after {
     visibility: hidden;
@@ -76,10 +73,7 @@ a {
   }
 }
 
-
 .flex-row {
-  font-family: Roboto;
-
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
