--- a/meteor-app/imports/ui/layouts/main/style.less
+++ b/meteor-app/imports/ui/layouts/main/style.less
@@ -1,4 +1,4 @@
-.page.layout-main {
+.layout-main {
 
   .mdc-toolbar {
     background-color: #F7f5E7;
@@ -14,8 +14,7 @@
     margin: 0 auto 0 auto;
   }
 
-
-  .page__header {
+  .layout__header {
     img {
       display: flex;
       width: 100%;
@@ -24,14 +23,14 @@
       justify-content: stretch;
     }
   }
-  .page__body,
-  .page__footer {
+  .layout__body,
+  .layout__footer {
     padding: @global-layout-padding;
     margin-bottom: @global-layout-margin;
     background-color: white;
   }
 
-  .page__footer {
+  .layout__footer {
     .flex-row;
     
     justify-content: space-between;
